<resources>
    <string name="app_name">LeaderBoard</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="textview_extra_label">extra info label</string>
    <string name="project_submission">Project Submission</string>
    <string name="toolbar_button_submit">Submit</string>
    <string name="edittext_firstname">First Name</string>
    <string name="edittext_lastname">Last Name</string>
    <string name="editetxt_email">Email Address</string>
    <string name="editetxt_githublink">Project on Github(link)</string>
    <string name="areyousurre">Are You Sure?</string>
    <string name="yess">Yes</string>
    <string name="Noo">No</string>
    <string name="successfulsubmission">Submission Succesful</string>
    <string name="failure">Submission not Succesfull</string>
</resources>
