<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubmitActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimary">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarsubmitactivity"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="LeaderBoard"
            app:titleTextColor="@color/colorAccent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintlayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:src="@drawable/gadsss"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/gadsss" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/divider_submission_activity" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/project_submission"
            android:textColor="@color/colorsubmitproject"
            android:textSize="@dimen/projectsubmission"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:layout_editor_absoluteX="-16dp">


            <EditText
                android:id="@+id/firstname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="5dp"
                android:background="@drawable/edittext_bg"
                android:hint="@string/edittext_firstname"
                android:padding="10dp"
                android:textSize="@dimen/edittextall"
                app:layout_constraintEnd_toStartOf="@+id/lastname"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/lastname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="5dp"
                android:background="@drawable/edittext_bg"
                android:hint="@string/edittext_lastname"
                android:padding="10dp"
                android:textSize="@dimen/edittextall"
                app:layout_constraintBottom_toBottomOf="@+id/firstname"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/firstname"
                app:layout_constraintTop_toTopOf="@+id/firstname" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/editetxt_email"
            android:padding="10dp"
            android:textSize="@dimen/edittextall"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <EditText
            android:id="@+id/gitlink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/editetxt_githublink"
            android:padding="10dp"
            android:textSize="@dimen/edittextall"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <Button
            android:id="@+id/submitbutton"
            android:layout_width="164dp"
            android:layout_height="52dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/submittbottonbg"
            android:text="@string/toolbar_button_submit"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/submitbutton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gitlink" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>